--- a/behaviors/index.html
+++ b/behaviors/index.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-  <div>Hello!!!</div>
+  <div id="test-display"></div>
+  <script type="module" src="./setupTestDisplay.ts"></script>
 </body>
 
 </html>
